fix and update version