@@ -1,19 +1,16 @@
 package utils;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
-import java.io.IOException;
+import java.util.Base64;
 
 public class Base64Utils {
 
     private static Base64Utils base64Utils = new Base64Utils();
-    private BASE64Encoder base64Encoder;
-    private BASE64Decoder base64Decoder;
+    private Base64.Encoder encoder;
+    private Base64.Decoder decoder;
 
     private Base64Utils() {
-        base64Encoder = new BASE64Encoder();
-        base64Decoder = new BASE64Decoder();
+        encoder = Base64.getEncoder();
+        decoder = Base64.getDecoder();
     }
 
     public static Base64Utils getInstance() {
@@ -24,14 +21,14 @@ public class Base64Utils {
      * base64 encode
      */
     public String encoder(byte[] data) {
-        return base64Encoder.encodeBuffer(data);
+        return encoder.encodeToString(data);
     }
 
     /**
      * base64 decode
      */
-    public byte[] decoder(String data) throws IOException {
-        return base64Decoder.decodeBuffer(data);
+    public byte[] decoder(String data) {
+        return decoder.decode(data);
     }
 
 }
